--- a/.github/workflows/invoke_ngsast.yml
+++ b/.github/workflows/invoke_ngsast.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
     - name: NextGen Static Analysis
-      run: ${GITHUB_WORKSPACE}/sl analyze --wait --app beginner-python-projects --tag branch=${{ github.head_ref }} --python .
+      run: ${GITHUB_WORKSPACE}/sl analyze --wait --app mb-python-test1 --tag branch=${{ github.head_ref }} --python .
       env:
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
